# MetricasDeRendimiento

15Ejercicios/: CMakeLists.txt  Readme.md  main.cpp
15Ejercicios/15Ejercicios/: main.cpp
Algebra01/: main.cpp
Algebra01/Debug/: Algebra01  CMakeCache.txt  Makefile  cmake_install.cmake
BMI_METRICAS/: BMI METRICAS.docx
BMI_METRICAS/BMI/: Makefile  bmi  bmi.cpp  bmi_lib.cpp
BMI_Metricas/: BMI METRICAS.docx
BMI_Metricas/BMI/: bmi.cpp  bmi_lib.h
Ejemplo/: CMakeLists.txt  cuaderno.ipynb  main.cpp
Ejemplo/Debug/: CMakeCache.txt  Ejemplo  Ejemplo.cbp  Makefile  cmake_install.cmake
Ejemplo/Debug/.cmake/api/v1/reply/: cache-v2-d3a0aa75db0b9911f7c7.json  cmakeFiles-v1-7cdaf1f5d59287753685.json  codemodel-v2-66812cd71fbb8db297a3.json  index-2022-09-12T12-43-15-0975.json  target-Ejemplo-Debug-5183ddad7eb53d9e2e46.json
Ejemplo/Extraccion/: extoeigen.cpp  extoeigen.h
Parcial1/: MetricasParcial1.ipynb  README.md
PrimerTallerEjercicios/: METRICAS TALLER EJERCICIOS.docx  documento.odt  ejercicio1.cpp  ejercicio2.cpp  ejercicio5.cpp  ejercicio7.cpp  ejercicio8.cpp
PrimerTallerEjercicios/PrimerTallerEjercicios/: ejercicio1  ejercicio2  ejercicio3  ejercicio3.cpp  ejercicio4  ejercicio4.cpp  ejercicio5  (+5 more)
PythonRegresionLogistica/: Modelos_Procesamiento2_0.ipynb  regresion_logistica1.ipynb
SEGUNDOPARCIAL/: FICHERITO.txt
TERCERPARCIAL/: README.md  README.rm
TERCERPARCIAL/logisticProyect/: CMakeLists.txt
TERCERPARCIAL/logisticProyect/Debug/: CMakeCache.txt  FICHERITO.txt
TERCERPARCIAL/logisticProyect/Extraccion/: extraction.h
logisticProyect/: main.cpp
(+22 files in other folders)
